[feat] 호텔 및 객실 이미지 추가, 해당 엔티티 및 DTO 수정